package com.example.backend.entities;

public class Tarea {
    
}
